# armnn-imx

./: BuildGuideCrossCompilationYocto.md  CMakeLists.txt  KnownLimitations.md  NXPExtension.md  README.md
cmake/: GlobalConfig.cmake
delegate/: CMakeLists.txt
delegate/cmake/Modules/: FindFlatbuffers.cmake  FindTfLite.cmake
delegate/samples/: README.md  armnn_delegate_example.cpp
delegate/src/: DelegateUtils.hpp
include/armnn/: BackendId.hpp  Version.hpp
profiling/common/include/: CommandHandlerFunctor.hpp
python/pyarmnn/: setup.py
src/armnn/: LayerSupport.cpp  Network.cpp
src/armnn/test/: ConstTensorLayerVisitor.cpp  TestLayerVisitor.cpp
src/armnnSerializer/: SerializerSupport.md
src/armnnTfLiteParser/: CMakeLists.txt
src/armnnTfParser/: TfParser.cpp
src/backends/: backends.cmake
src/backends/backendsCommon/test/layerTests/: SoftmaxTestImpl.cpp
src/backends/cl/: backend.cmake
src/backends/dynamic/vsi_npu/: CMakeLists.txt
src/backends/neon/: backend.cmake
src/backends/reference/: backend.cmake
src/backends/reference/workloads/: DetectionPostProcess.cpp
src/backends/vsiNpu/: NpuLayerSupport.cpp  NpuTensorHandler.hpp  arm_nn_interpreter.cpp  arm_nn_interpreter.hpp
src/backends/vsiNpu/test/: NpuLayerTests.cpp
src/backends/vsiNpu/workloads/: FakeBiasSelector.hpp  NpuBatchToSpaceNdWorkload.hpp  NpuConcatWorkload.hpp  NpuInputWorkload.hpp  NpuMeanWorkload.hpp  NpuNormalizationWorkload.hpp  NpuReshapeWorkload.hpp  NpuSpaceToDepthWorkload.hpp  NpuStridedSliceWorkload.hpp  NpuTransposeConvolution2dWorkload.hpp
src/backends/vsi_npu/: BUILD  CMakeLists.txt  NpuBackend.cpp  NpuBackendContext.cpp  NpuLayerSupport.cpp  NpuLayerSupport.hpp  NpuModelShell.cpp  NpuTensorHandler.cpp  NpuWorkloadFactory.cpp  NpuWorkloadFactory.hpp  arm_nn_interpreter.cpp  backend.cmake  backend.mk
src/backends/vsi_npu/dynamic/: CMakeLists.txt
src/backends/vsi_npu/test/: CMakeLists.txt  NpuCreateWorkloadTests.cpp  NpuEndToEndTests.cpp  NpuLayerSupportTests.cpp  NpuLayerTests.cpp  NpuOptimizedNetworkTests.cpp  NpuWorkloadFactoryHelper.hpp
src/backends/vsi_npu/workloads/: CMakeLists.txt  NpuActivationWorkload.hpp  NpuArgMinMaxWorkload.hpp  NpuBatchNormalizationWorkload.hpp  NpuBatchToSpaceNdWorkload.hpp  NpuComparisonWorkload.hpp  NpuConcatWorkload.hpp  NpuConstantWorkload.hpp  NpuConvolution2dWorkload.hpp  NpuDepthToSpaceWorkload.hpp  NpuDepthWiseConvolution2dWorkload.hpp  NpuDetectionPostProcessWorkload.hpp  NpuElementwiseUnarytWorkload.hpp  NpuElementwiseWorkload.hpp  NpuFullyConnectedWorkload.hpp  NpuGatherWorkload.hpp  NpuInputWorkload.cpp  NpuInstanceNormWorkload.hpp  NpuL2NormalizationWorkload.hpp  NpuLstmWorkload.hpp  NpuMeanWorkload.hpp  NpuNormalizationWorkload.hpp  NpuOutputWorkload.cpp  NpuOutputWorkload.hpp  NpuPadWorkload.hpp  NpuPermuteWorkload.hpp  NpuPooling2dWorkload.hpp  NpuPreluWorkload.hpp  NpuReshapeWorkload.hpp  NpuResizeWorkload.hpp  NpuRsqrtWorkload.hpp  NpuSliceWorkload.hpp  NpuSoftmaxWorkload.hpp  NpuSpaceToBatchNdWorkload.hpp  NpuSpaceToDepthWorkload.hpp  NpuSplitterWorkload.hpp  NpuTensorCopyWorkload.hpp  NpuTransposeConvolution2dWorkload.hpp  NpuWorkloadUtils.hpp
src/profiling/: IProfilingServiceStatus.hpp  PeriodicCounterCapture.hpp
tests/: CMakeLists.txt
tests/VSI/: BUILD  CMakeLists.txt  CaffeAlexNet-Armnn.cpp  CaffeCifar10AcrossChannels-Armnn.cpp  CaffeInceptionV3-Armnn.cpp  CaffeInceptionV4-Armnn.cpp  CaffeInception_BN-Armnn.cpp  CaffeMnist-Armnn.cpp  CaffeMobilenetV1-Armnn.cpp  CaffeMobilenetV2-Armnn.cpp  CaffeResNet-Armnn.cpp  CaffeSqueezeNet1_0-Armnn.cpp  CaffeSqueezeNet1_1-Armnn.cpp  CaffeVGG-Armnn.cpp  CaffeYolo-Armnn.cpp  TfInceptionV3-Armnn.cpp  TfLiteDensenetFloat-Armnn.cpp  TfLiteInceptionResnetV2Float-Armnn.cpp  TfLiteInceptionV1Quantized-Armnn.cpp  TfLiteInceptionV2Quantized-Armnn.cpp  TfLiteInceptionV3Float-Armnn.cpp  TfLiteInceptionV3Quantized-Armnn.cpp  TfLiteInceptionV4Float-Armnn.cpp  TfLiteInceptionV4Quantized-Armnn.cpp  TfLiteMnasNet-Armnn.cpp  TfLiteMobileNetSsd-Armnn.cpp  TfLiteMobilenetV1Float-Armnn.cpp  TfLiteMobilenetV1Quantized-Armnn.cpp  TfLiteMobilenetV2Quantized-Armnn.cpp  TfLiteResnetV2Float-Armnn.cpp  TfLiteSqueezenetFloat-Armnn.cpp  TfMobileNet-Armnn.cpp
